--- a/style.css
+++ b/style.css
@@ -8,10 +8,13 @@
 body
 {
     font-family: 'Inter', sans-serif;
-    line-height: 1.4;
+    line-height: 1.4rem;
     background-color: #1d1d1d;
 
     color: rgb(169, 167, 167);
+}
+html{
+    font-size: 62.5%;
 }
 .HTML_Container
 {
@@ -24,22 +27,22 @@ body
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 50px ;
+    padding: 1.25rem 1.82rem ;
     background-color: #0a0908;
-
+    margin-bottom: 2rem;
 }
 .links
 {
     display: flex;
     justify-content: space-between;
-    gap: 1.5em;
+    gap: 1.5rem;
 
 }
 .Nav_Bar a:link{
     color: rgb(169, 167, 167);
     font-size: large;
     text-decoration: none;
-    font-size: 2em;
+    font-size: 1.2rem;
 }
 .Nav_Bar a:visited {
     color: rgb(169, 167, 167);
@@ -61,17 +64,29 @@ body
 /* Change hobe */
 .Nav_Barprofile img
 {
-    width: 5em;
+    width: 5rem;
     border-radius: 50%;
     align-self: end;
 }
 
+.Container
+{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 2.5rem;
+}
+
+h1
+{
+    /* margin-bottom: 1rem; */
+
+}
 .Gallery
 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 15px;
+    gap: 0.938rem;
 }
 
 .Gallery h1
@@ -87,6 +102,6 @@ body
 {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    padding: 0 100px;
+    gap: 0.625rem;
+    padding: 0 6.25rem;
 }
