--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ html{
   
 .Nav_Bar a:hover {
     text-decoration: none;
-    border: white;
+    border-style: solid;
     border-color: aliceblue;
     /* cursor: crosshair; */
   }
@@ -74,13 +74,72 @@ html{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 2.5rem;
+    margin: 0 3em;  /* to center container elements */
+}
+.Hobbies p
+{
+    text-decoration: underline;
+    margin-top: 1rem;
+}
+
+.Hobbies ul
+{
+    list-style-type: decimal;
+    margin-top: 0.5rem;
+    padding-left: 2rem;
 }
 
 h1
 {
-    /* margin-bottom: 1rem; */
-
+    margin-bottom: 1rem;
 }
+
+.Project_links ul 
+{
+    margin-top: 2rem;
+    margin-left: 1.2rem;
+    list-style-type: none;
+    font-size: 120%;
+    
+    /* list-style-image: url("images/GitHub-Mark.png"); */
+  }
+
+
+.Project_links li{
+    padding: 0.5rem 2.4rem;
+    background-image: url("images/github-svgrepo-com.svg");
+    background-size: 30px;
+    background-repeat:no-repeat;
+    background-position: left center;
+    background-size: 20px;
+}
+
+
+.Project_links a:link
+{
+    color: rgb(169, 167, 167);
+    font-size: large;
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+.Project_links a:visited 
+{
+    color: rgb(169, 167, 167);
+    text-decoration: none;
+    background-color: whitesmoke;
+  }
+
+  
+.Project_links a:hover 
+{
+    border-bottom: 1px solid;
+    background: grey;
+}
+  
+.Project_links a:active {
+    text-decoration: underline;
+}
+
 .Gallery
 {
     display: flex;
