--- a/style.css
+++ b/style.css
@@ -1,166 +1,196 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body
-{
+body {
     font-family: 'Inter', sans-serif;
     line-height: 1.4rem;
-    background-color: #1d1d1d;
+    background-image: url("images/start-background.gif");
+
 
     color: rgb(169, 167, 167);
 }
-html{
+
+html {
     font-size: 62.5%;
 }
-.HTML_Container
-{
+
+.HTML_Container {
     display: grid;
 }
 
 
-.Nav_Bar
-{
+.Nav_Bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.25rem 1.82rem ;
+    padding: 1.25rem 1.82rem;
     background-color: #0a0908;
     margin-bottom: 2rem;
 }
-.links
-{
+
+.links {
     display: flex;
     justify-content: space-between;
     gap: 1.5rem;
 
 }
-.Nav_Bar a:link{
+
+.Nav_Bar a:link {
     color: rgb(169, 167, 167);
     font-size: large;
     text-decoration: none;
     font-size: 1.2rem;
 }
+
 .Nav_Bar a:visited {
     color: rgb(169, 167, 167);
     text-decoration: none;
     background-color: whitesmoke;
-  }
-  
+}
+
 .Nav_Bar a:hover {
     text-decoration: none;
     border-style: solid;
     border-color: aliceblue;
     /* cursor: crosshair; */
-  }
-  
+}
+
 .Nav_Bar a:active {
     text-decoration: underline;
 }
 
 /* Change hobe */
-.Nav_Barprofile img
-{
+.Nav_Barprofile img {
     width: 5rem;
     border-radius: 50%;
     align-self: end;
 }
 
-.Container
-{
+.Container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 2.5rem;
-    margin: 0 3em;  /* to center container elements */
+    margin: 0 3em;
+    /* to center container elements */
 }
-.Hobbies p
-{
+
+.Hobbies p {
     text-decoration: underline;
     margin-top: 1rem;
 }
 
-.Hobbies ul
-{
+.Hobbies ul {
     list-style-type: decimal;
     margin-top: 0.5rem;
     padding-left: 2rem;
 }
 
-h1
-{
+h1 {
     margin-bottom: 1rem;
 }
 
-.Project_links ul 
-{
+.Project_links ul {
     margin-top: 2rem;
     margin-left: 1.2rem;
     list-style-type: none;
     font-size: 120%;
-    
+
     /* list-style-image: url("images/GitHub-Mark.png"); */
-  }
+}
 
 
-.Project_links li{
+.Project_links li {
     padding: 0.5rem 2.4rem;
     background-image: url("images/github-svgrepo-com.svg");
     background-size: 30px;
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
     background-position: left center;
     background-size: 20px;
 }
 
 
-.Project_links a:link
-{
+.Project_links a:link {
     color: rgb(169, 167, 167);
     font-size: large;
     text-decoration: none;
     font-size: 1.2rem;
 }
-.Project_links a:visited 
-{
+
+.Project_links a:visited {
     color: rgb(169, 167, 167);
     text-decoration: none;
     background-color: whitesmoke;
-  }
+}
 
-  
-.Project_links a:hover 
-{
+
+.Project_links a:hover {
     border-bottom: 1px solid;
     background: grey;
 }
-  
+
 .Project_links a:active {
     text-decoration: underline;
 }
 
-.Gallery
-{
+.Gallery {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 0.938rem;
 }
 
-.Gallery h1
-{
+.Gallery h1 {
     align-self: start;
 }
 
-.Gallery img{
+.Gallery img {
     width: 70%;
 }
 
-.Contact_info ul
-{
+.Contact_info ul {
     display: flex;
     flex-direction: column;
     gap: 0.625rem;
     padding: 0 6.25rem;
+}
+
+.footer {
+    padding: 2rem 0rem;
+    background-color: rgb(0, 0, 0);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+}
+
+.header {
+    grid-column: 2/3;
+    justify-self: center;
+}
+
+
+.footer-container {
+    align-self: stretch;
+    grid-row: 2;
+    grid-column: 1/-1;
+    display: flex;
+    justify-content: space-between;
+}
+
+@media (max-width: 337px) {
+    .Nav_Bar a:link {
+        color: rgb(169, 167, 167);
+        text-decoration: none;
+        font-size: 0.90rem;
+    }
+    .header
+    {
+        font-size: 1.5rem;
+    }
+    .footer-container {
+        font-size: 0.7rem;
+        justify-content: space-between;
+    }
 }
